cambios iniciales en la web

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,6 +22,7 @@
         <li><a href="/">Proceso</a></li>
         <li><a href="/graphics">Tiempo Real</a></li>
         <li><a href="/dbase">Base de Datos</a></li>
+        <li><a href="/autoclave">Auto Clave</a></li>
       </ul>
     </nav>
 
@@ -32,8 +33,8 @@
       {% endblock %}
 
         <aside>
-           <h3> Sobre el autor </h3>
-                <p> Sitio en desarrollo. <a href="mailto:felipe.hooper.c@gmail.com">Correo electronico </a></p>
+           <h3>BioReactor for BIOCL-IDIN </h3>
+                <p> Autor: Felipe Hooper - Electronic Engineer. <a href="mailto:felipe.hooper.c@gmail.com">Correo electronico </a></p>
         </aside>
     </section>
   </div>
