--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -11,6 +11,7 @@
             <option value="reiniciar">Reiniciar</option>
             <option value="apagar">Apagar</option>
             <option value="limpiar">Borrar Archivos</option>
+            <option value="autoclave">Activar Auto Clave></option>
       </select>
 
       <input type="checkbox" id="confirm">
@@ -40,22 +41,6 @@
     </div>
 
 
-    <div class="caja_central_arriba"> Mezclar [rpm]:
-                <input type="number"
-                       id="mezclar"
-                       style="width: 50px;"
-                       MIN="0"
-                       MAX="1500"
-                       step="1"
-                       value=""
-                 />
-                 <button  type="submit" class="button_apply"> + </button>         <br>
-                 <input  type="checkbox" id="mezclar_rst" /> Deshabilitar
-    </div>
-
-    <div class="caja_central">
-      <!CAJA CENTRAL PARA EL DIBUJO>
-    </div>
 
 
     <div class="caja_izquierda_centro"> Temperatura [ºC]: <br>
@@ -74,41 +59,6 @@
     </div>
 
 
-
-    <div class="caja_izquierda_abajo"> Configurar Ph: <br>
-            <input type="number"
-                   id="ph"
-                   value=""
-                   style="width: 50px;"
-                   MIN="0"
-                   MAX="14"
-                   step="0.1"
-            />
-
-            <button  type="submit" class="button_apply"> + </button>     <br>
-            <input  type="checkbox" id="ph_rst" /> Deshabilitar   <br>
-            <input  type="checkbox" id="ph_dir" /> Invertir
-    </div>
-
-
-    <div class="caja_derecha_arriba1" id="med1"></div>
-    <div class="caja_derecha_arriba2" id="med2"></div>
-    <div class="caja_derecha_arriba3" id="med3"></div>
-
-
-    <div class="caja_derecha_abajo">Descarga [rpm]:
-            <br><input  type="number"
-                    id="descargar"
-                    style="width: 50px;"
-                    MIN="0"
-                    MAX="150"
-                    step="1"
-                    value=""
-            />
-                <button  type="submit" class="button_apply"> + </button>
-            <br><input  type="checkbox" id="descargar_rst"/> Deshabilitar
-
-  </div>
 
 </form>
 
