--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
 <script type="text/javascript" src="{{ url_for('static', filename='js/my_javascript.js') }}"></script>
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheets/autoclave.css') }}">
+
 
 <section>
   <form id="process" method="POST" action='#'>
