preparando autoclave web

--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -23,7 +23,7 @@
 
 <form id="setpoints" method="POST" action='#'>
 
-    <div class="caja_izquierda_arriba">Alimentar [rpm]: <br>
+    <div class="caja1">Alimentar [rpm]: <br>
               <input type="number"
                      id="alimentar"
                      style="width: 50px;"
@@ -46,7 +46,7 @@
     </div>
 
 
-    <div class="caja_izquierda_centro"> Temperatura [ºC]: <br>
+    <div class="caja3"> Temperatura [ºC]: <br>
             <input type="number"
                    id="temperatura"
                    value="25"
