preparando autoclave website

--- a/static/stylesheets/autoclave.css
+++ b/static/stylesheets/autoclave.css
@@ -91,15 +91,15 @@ fieldset {
     font-size: 16px;
     font-family: verdana;
     background: rgb(65, 182, 230);
-    width: 300px;
-    height: 280px;
+    width: 180px;
+    height: 80px;
     padding: 10px;
     border: 2px solid lightblue;
-    margin-top: 15px;
+    margin-top: 60px;
     margin-bottom: 15px;
     margin-right: 5px;
     text-align: left;
-    margin-left: 150px;
+    margin-left: 80px;
     border-radius: 50px;
 }
 
@@ -111,9 +111,9 @@ fieldset {
   font-family: verdana;
   width: 300px;
   height: 450px;
-  margin-top: 10px;
+  margin-top: -150px;
   margin-right: 40px;
-  margin-bottom: 10px;
+  margin-bottom: 130px;
   text-align: center;
   border: 2px solid lightblue;
   margin-left: 305px;
@@ -124,16 +124,69 @@ fieldset {
     font-size: 16px;
     font-family: verdana;
     background: rgb(65, 182, 230);
-    width: 300px;
-    height: 280px;
+    width: 180px;
+    height: 80px;
     padding: 10px;
     border: 2px solid lightblue;
     margin-top: -360px;
     margin-right: -50px;
     text-align: left;
-    margin-bottom: 110px;
-    margin-left: 852px;
+    margin-bottom: 310px;
+    margin-left: 80px;
     border-radius: 50px;
+}
+
+
+.caja_derecha_arriba1{
+  font-size: 18px;
+  font-family: verdana;
+  background: YellowGreen;
+  width: 200px;
+  height: 30px;
+  padding: 10px;
+  border: 2px solid lightblue;
+  margin-right: 150px;
+  text-align: center;
+  margin-left: 610px;
+
+  margin-bottom: 10px;
+  margin-top: -550px;
+  border-radius: 50px;
+}
+
+
+.caja_derecha_arriba2{
+  font-size: 18px;
+  font-family: verdana;
+  background: YellowGreen;
+  width: 200px;
+  height: 30px;
+  padding: 10px;
+  border: 2px solid lightblue;
+  margin-right: 150px;
+  text-align: center;
+  margin-left: 610px;
+
+  margin-bottom: 10px;
+  margin-top: 10px;
+  border-radius: 50px;
+}
+
+.caja_derecha_arriba3{
+  font-size: 18px;
+  font-family: verdana;
+  background: YellowGreen;
+  width: 200px;
+  height: 30px;
+  padding: 10px;
+  border: 2px solid lightblue;
+  margin-right: 150px;
+  text-align: center;
+  margin-left: 610px;
+
+  margin-bottom: 10px;
+  margin-top: 10px;
+  border-radius: 50px;
 }
 
 
