--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -23,7 +23,7 @@
 
 <form id="setpoints" method="POST" action='#'>
 
-    <div class="caja1">Alimentar [rpm]: <br>
+    <div class="caja1">Tiempo [rpm]: <br>
               <input type="number"
                      id="alimentar"
                      style="width: 50px;"
@@ -34,7 +34,6 @@
               />
               <button  type="submit" class="button_apply"> + </button>
               <br><input  type="checkbox" id="alimentar_rst" /> Deshabilitar
-              <br><input  type="checkbox" id="alimentar_dir" /> Invertir
 
 
     </div>
@@ -58,7 +57,6 @@
 
             <button  type="submit" class="button_apply"> + </button>     <br>
             <input  type="checkbox" id="temperatura_rst" /> Deshabilitar   <br>
-            <input  type="checkbox" id="temperatura_dir" /> Invertir
     </div>
 
 
