--- a/static/stylesheets/autoclave.css
+++ b/static/stylesheets/autoclave.css
@@ -2,7 +2,7 @@
 
 body{
   background-color: #F5F5F5;
-
+  margin: 20px;
 }
 
 header{
@@ -91,16 +91,16 @@ fieldset {
     font-size: 16px;
     font-family: verdana;
     background: rgb(65, 182, 230);
-    width: 180px;
+    width: 200px;
     height: 80px;
     padding: 10px;
     border: 2px solid lightblue;
-    margin-top: 60px;
+    margin-top: 50px;
     margin-bottom: 15px;
     margin-right: 5px;
     text-align: left;
     margin-left: 80px;
-    border-radius: 50px;
+    border-radius: 20px;
 }
 
 
@@ -116,7 +116,7 @@ fieldset {
   margin-bottom: 130px;
   text-align: center;
   border: 2px solid lightblue;
-  margin-left: 305px;
+  margin-left: 310px;
 }
 
 
@@ -124,16 +124,16 @@ fieldset {
     font-size: 16px;
     font-family: verdana;
     background: rgb(65, 182, 230);
-    width: 180px;
+    width: 200px;
     height: 80px;
     padding: 10px;
     border: 2px solid lightblue;
-    margin-top: -360px;
+    margin-top: -440px;
     margin-right: -50px;
     text-align: left;
-    margin-bottom: 310px;
+    margin-bottom: 300px;
     margin-left: 80px;
-    border-radius: 50px;
+    border-radius: 20px;
 }
 
 
@@ -153,7 +153,6 @@ fieldset {
   margin-top: -550px;
   border-radius: 50px;
 }
-
 
 .caja_derecha_arriba2{
   font-size: 18px;
@@ -184,7 +183,7 @@ fieldset {
   text-align: center;
   margin-left: 610px;
 
-  margin-bottom: 10px;
+  margin-bottom: 60px;
   margin-top: 10px;
   border-radius: 50px;
 }
