--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
+<script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/socket.io.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/autoclave_javascript.js') }}"></script>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheets/autoclave.css') }}">
 
