--- a/static/stylesheets/autoclave.css
+++ b/static/stylesheets/autoclave.css
@@ -1,90 +1,3 @@
-<!Modelos de caja>
-
-body{
-  background-color: #F5F5F5;
-  margin: 20px;
-}
-
-header{
-  text-align: center;
-  background: white;
-  font-size: 70px;
-  font-family: verdana;
-}
-
-section{
-  margin-right: auto;
-  margin-left: auto;
-}
-
-
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #333;
-}
-
-
-li {
-    float: left;
-    border-right: 4px solid #bbb;
-}
-
-li:last-child {
-    border-right: none;
-}
-
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-
-li a:hover:not(.active) {
-    background-color: #111;
-}
-
-.active {
-    background-color: #4CAF50;
-}
-
-
-nav{
-  margin-right: auto;
-  margin-left: auto;
-  background-color: lightblue;
-  height: 40px;
-  font-size: 16px;
-  font-family: verdana;
-  text-align: center;
-}
-
-aside{
-  margin-top: 200px;
-
-}
-
-footer{
-  font-size: 16px;
-  background: lightblue;
-  height: 70px;
-  text-align: center;
-  margin-top: 5px;
-}
-
-fieldset {
-  padding: 1em;
-  font:100%/1 sans-serif;
-  margin-right:20px;
-  margin-top:20px;
-  text-align: center;
-  }
-
 
 
 .caja1 {
@@ -191,88 +104,9 @@ fieldset {
 
 
 .centrar{
-  margin-left: -60px;
-/*  margin-right: auto;
-    margin-left: auto;
-  */
+/*  margin-left: -40px; */
+  margin-right: auto;
+  margin-left: auto;
+  
 }
 
-
-
-
-.button {
-    border-radius: 12px;
-    position: relative;
-    background-color: red;
-    border: none;
-    font-size: 28px;
-    color: #FFFFFF;
-    padding: 7px;
-    width: 50px;
-    text-align: center;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    text-decoration: none;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-
-.button:after {
-    content: "";
-    background: #f1f1f1;
-    display: block;
-    position: absolute;
-    padding-top: 300%;
-    padding-left: 350%;
-    margin-left: -20px !important;
-    margin-top: -120%;
-    opacity: 0;
-    transition: all 0.8s
-}
-
-
-.button:active:after {
-    padding: 0;
-    margin: 0;
-    opacity: 1;
-    transition: 0s
-}
-
-
-.button_apply {
-    border-radius: 12px;
-    position: relative;
-    background-color: #00CED1;
-    border: none;
-    font-size: 24px;
-    color: #FFFFFF;
-    padding: 5px;
-    width: 45px;
-    text-align: center;
-    -webkit-transition-duration: 0.4s; /* Safari */
-    transition-duration: 0.4s;
-    text-decoration: none;
-    overflow: hidden;
-    cursor: pointer;
-}
-
-.button_apply:after {
-    content: "";
-    background: #f1f1f1;
-    display: block;
-    position: absolute;
-    padding-top: 300%;
-    padding-left: 350%;
-    margin-left: -20px !important;
-    margin-top: -120%;
-    opacity: 0;
-    transition: all 0.8s
-}
-
-.button_apply:active:after {
-    padding: 0;
-    margin: 0;
-    opacity: 1;
-    transition: 0s
-}
