trabajando en autoclave.html, js, css

--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -29,13 +29,13 @@
               <input type="number"
                      id="alimentar"
                      style="width: 50px;"
-                     value=""
+                     value="130"
                      MIN="0"
                      MAX="150"
                      step="1"
               />
               <button  type="submit" class="button_apply"> + </button>
-              <br><input  type="checkbox" id="alimentar_rst" /> Deshabilitar
+              <br><input  type="checkbox" id="alimentar_rst" /> habilitar
 
 
     </div>
@@ -58,7 +58,7 @@
             />
 
             <button  type="submit" class="button_apply"> + </button>     <br>
-            <input  type="checkbox" id="temperatura_rst" /> Deshabilitar   <br>
+            <input  type="checkbox" id="temperatura_rst" /> habilitar   <br>
     </div>
 
 
