trabajando en autoclave web

--- a/static/stylesheets/autoclave.css
+++ b/static/stylesheets/autoclave.css
@@ -19,7 +19,7 @@
 
 
 .caja_central{
-  background-image: url("bioreactor.svg");
+  background-image: url("bioreactor2.svg");
   font-size: 16px;
   font-family: verdana;
   width: 300px;
