trabajando en autoclave web

--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -23,11 +23,11 @@
 
 
 
-<form id="setpoints" method="POST" action='#'>
+<form id="ac_setpoints" method="POST" action='#'>
 
     <div class="caja1">Tiempo [rpm]: <br>
               <input type="number"
-                     id="alimentar"
+                     id="time"
                      style="width: 50px;"
                      value="130"
                      MIN="0"
@@ -35,7 +35,7 @@
                      step="1"
               />
               <button  type="submit" class="button_apply"> + </button>
-              <br><input  type="checkbox" id="alimentar_rst" /> habilitar
+              <br><input  type="checkbox" id="time_enable" /> habilitar
 
 
     </div>
@@ -49,7 +49,7 @@
 
     <div class="caja3"> Temperatura [ºC]: <br>
             <input type="number"
-                   id="temperatura"
+                   id="temp"
                    value="25"
                    style="width: 50px;"
                    MIN="0"
@@ -58,7 +58,7 @@
             />
 
             <button  type="submit" class="button_apply"> + </button>     <br>
-            <input  type="checkbox" id="temperatura_rst" /> habilitar   <br>
+            <input  type="checkbox" id="temp_enable" /> habilitar   <br>
     </div>
 
 
