--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -25,13 +25,13 @@
 
 <form id="ac_setpoints" method="POST" action='#'>
 
-    <div class="caja1">Tiempo [rpm]: <br>
+    <div class="caja1">Tiempo [Min]: <br>
               <input type="number"
                      id="time"
                      style="width: 50px;"
                      value="130"
                      MIN="0"
-                     MAX="150"
+                     MAX="120"
                      step="1"
               />
               <button  type="submit" class="button_apply"> + </button>
@@ -53,7 +53,7 @@
                    value="25"
                    style="width: 50px;"
                    MIN="0"
-                   MAX="100"
+                   MAX="130"
                    step="1"
             />
 
