trabajando en autoclave app.py

--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -10,9 +10,8 @@
   <form id="process" method="POST" action='#'>
   <fieldset>
       <select name="selection" id="select">
-            <option value="reiniciar">Reiniciar</option>
-            <option value="apagar">Apagar</option>
-            <option value="autoclave" selected>Activar Auto Clave></option>
+            <option value="apagar">Apagar AutoClave</option>
+            <option value="autoclave" selected>Activar AutoClave></option>
       </select>
 
       <input type="checkbox" id="confirm">
@@ -29,7 +28,7 @@
               <input type="number"
                      id="time"
                      style="width: 50px;"
-                     value="130"
+                     value="30"
                      MIN="0"
                      MAX="120"
                      step="1"
@@ -49,7 +48,7 @@
     <div class="caja3"> Temperatura [ºC]: <br>
             <input type="number"
                    id="temp"
-                   value="25"
+                   value="120"
                    style="width: 50px;"
                    MIN="0"
                    MAX="130"
