--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -2,7 +2,7 @@
 {% block content %}
 <script type="text/javascript" src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
 <script type="text/javascript" src="{{ url_for('static', filename='js/socket.io.min.js') }}"></script>
-<script type="text/javascript" src="{{ url_for('static', filename='js/autoclave_javascript.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/autoclave.js') }}"></script>
 <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylesheets/autoclave.css') }}">
 
 
@@ -39,7 +39,7 @@
 
     </div>
 
-    
+
     <div class="caja_central">
       <!CAJA CENTRAL PARA EL DIBUJO>
     </div>
