--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -23,8 +23,8 @@
 
 <!caja1: Timer Set>
 <form id="ac_setpoints" method="POST" action='#'>
-    <div class="caja1">Tiempo [Min]: <br>
-      <div id="timer_set">Timer Set</div>
+    <div class="caja1">Tiempo [Min]:
+      <div id="timer_set">Timer Set</div> <br>
 
               <input type="number"
                      id="time"
@@ -45,8 +45,8 @@
 
 
     <!caja3: Temperature Set>
-    <div class="caja3"> Temperatura [ºC]: <br>
-      <div id="temp_set">Temp Set</div>
+    <div class="caja3"> Temperatura [ºC]:
+      <div id="temp_set">Temp Set</div> <br>
 
             <input type="number"
                    id="temp"
