cambios en autoclave web

--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -24,7 +24,7 @@
 <!caja1: Timer Set>
 <form id="ac_setpoints" method="POST" action='#'>
     <div class="caja1">Tiempo [Min]:
-      <div id="timer_set">Timer Set</div> <br>
+      <div id="timer_set">Timer Set</div> 
 
               <input type="number"
                      id="time"
@@ -46,7 +46,7 @@
 
     <!caja3: Temperature Set>
     <div class="caja3"> Temperatura [ºC]:
-      <div id="temp_set">Temp Set</div> <br>
+      <div id="temp_set">Temp Set</div>
 
             <input type="number"
                    id="temp"
