cambios en autoclave web

--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -24,7 +24,7 @@
 <!caja1: Timer Set>
 <form id="ac_setpoints" method="POST" action='#'>
     <div class="caja1">Tiempo [Min]:
-      <div id="timer_set">Timer Set</div> 
+      <p id="timer_set">Timer Set</p> 
 
               <input type="number"
                      id="time"
