cambios en autoclave web

--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -23,9 +23,9 @@
 
 <!caja1: Timer Set>
 <form id="ac_setpoints" method="POST" action='#'>
-    <div class="caja1">Tiempo [Min]:
-      <p id="timer_set">Timer Set</p> 
-
+    <div class="caja1">
+      <div id="timer_set">Timer Set</div>
+      Tiempo [Min]:
               <input type="number"
                      id="time"
                      style="width: 50px;"
