--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -24,8 +24,8 @@
 <!caja1: Timer Set>
 <form id="ac_setpoints" method="POST" action='#'>
     <div class="caja1">
-      <div id="timer_set">Timer Set</div>
-      Tiempo [Min]:
+      <div id="timer_set">Timer Set:</div>
+        Tiempo [Min]:
               <input type="number"
                      id="time"
                      style="width: 50px;"
@@ -45,9 +45,9 @@
 
 
     <!caja3: Temperature Set>
-    <div class="caja3"> Temperatura [ºC]:
-      <div id="temp_set">Temp Set</div>
-
+    <div class="caja3">
+      <div id="temp_set">Temp Set:</div>
+        Temperatura [ºC]:
             <input type="number"
                    id="temp"
                    value="120"
