cambios en autoclave web

--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -24,7 +24,7 @@
 <!caja1: Timer Set>
 <form id="ac_setpoints" method="POST" action='#'>
     <div class="caja1">
-      <div id="timer_set">Timer Set:</div>
+      <div id="time_set">Timer Set:</div>
         Tiempo [Min]:
               <input type="number"
                      id="time"
