cambios en los nombres de archivos html y js de proceso - ex index

--- a/templates/proceso.html
+++ b/templates/proceso.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<script type="text/javascript" src="{{ url_for('static', filename='js/my_javascript.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='js/proceso.js') }}"></script>
 
 <section>
   <form id="process" method="POST" action='#'>
