cambios en autoclave web

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -340,6 +340,7 @@ fieldset {
     transition: 0s
 }
 
+/*
 .caja_calibrar_medidas {
   font-size: 16px;
   font-family: verdana;
@@ -356,7 +357,8 @@ fieldset {
   margin-left: 60px;
   border-radius: 50px;
 }
-
+*/
+/*
 .caja_ph {
   position: relative;
   font-size: 16px;
@@ -374,3 +376,4 @@ fieldset {
   margin-left: 60px;
   border-radius: 50px;
 }
+*/
