cambios en autoclave web

--- a/static/stylesheets/autoclave.css
+++ b/static/stylesheets/autoclave.css
@@ -1,4 +1,12 @@
+<!css autoclave>
 
+
+header{
+  text-align: center;
+  background: white;
+  font-size: 70px;
+  font-family: verdana;
+}
 
 .caja1 {
     font-size: 16px;
