cambios en autoclave web

--- a/static/stylesheets/calibrar.css
+++ b/static/stylesheets/calibrar.css
@@ -1,5 +1,14 @@
-<!Modelos de caja>
+<!Modelos de caja calibrar>
 
+
+
+
+header{
+  text-align: center;
+  background: white;
+  font-size: 70px;
+  font-family: verdana;
+}
 
 
 .caja1 {
