cambios en autoclave web

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -269,7 +269,7 @@ fieldset {
     border-radius: 12px;
     position: relative;
     background-color: red;
-    border: none;
+    /*border: none;*/
     font-size: 28px;
     color: #FFFFFF;
     padding: 7px;
@@ -307,7 +307,7 @@ fieldset {
     border-radius: 12px;
     position: relative;
     background-color: #00CED1;
-    border: none;
+    /*border: none;*/
     font-size: 24px;
     color: #FFFFFF;
     padding: 5px;
@@ -339,41 +339,3 @@ fieldset {
     opacity: 1;
     transition: 0s
 }
-
-/*
-.caja_calibrar_medidas {
-  font-size: 16px;
-  font-family: verdana;
-  background: rgb(65, 182, 230);
-  width: 1100px;
-  height: 600px;
-  padding: 20px;
-  border: 2px solid lightblue;
-  margin-top: 2px;
-  margin-right: -50px;
-  text-align: left;
-
-  margin-bottom: 110px;
-  margin-left: 60px;
-  border-radius: 50px;
-}
-*/
-/*
-.caja_ph {
-  position: relative;
-  font-size: 16px;
-  font-family: verdana;
-  background: rgb(65, 182, 230);
-  width: 300px;
-  height: 450px;
-  padding: 20px;
-  border: 2px solid lightblue;
-  margin-top: 2px;
-  margin-right: -50px;
-  text-align: left;
-
-  margin-bottom: 110px;
-  margin-left: 60px;
-  border-radius: 50px;
-}
-*/
