--- a/templates/base.html
+++ b/templates/base.html
@@ -18,8 +18,8 @@
     <header> <img src="{{ url_for('static', filename='stylesheets/biocl.jpg') }}" style="width:650px;height:120px;"> </header>
     <nav>
       <ul>
-        <li><a href="/autoclave">AutoClave</a></li>
         <li><a href="/calibrar">Calibrar</a></li>
+        <li><a href="/autoclave">Esterilización</a></li>
         <li><a href="/">Proceso</a></li>
         <li><a href="/graphics">Tiempo Real</a></li>
         <li><a href="/dbase">Base de Datos</a></li>
