cambias de generales

--- a/templates/dbase.html
+++ b/templates/dbase.html
@@ -16,7 +16,7 @@
           <form id="form_db" method="post" action='#'>
 
                   <select id="variable" type="text" value="">
-                        <option value="ph" selected > ph   </option>
+                        <option value="ph" selected > pH   </option>
                         <option value="od"          > od   </option>
                         <option value="temp"        > Temp </option>
                   </select>
