--- a/templates/proceso.html
+++ b/templates/proceso.html
@@ -70,12 +70,12 @@
 
             <button  type="submit" class="button_apply"> + </button>     <br>
             <input  type="checkbox" id="temperatura_rst" /> Deshabilitar   <br>
-            <input  type="checkbox" id="temperatura_dir" /> Invertir
+            <!input  type="checkbox" id="temperatura_dir" /> Invertir
     </div>
 
 
 
-    <div class="caja_izquierda_abajo"> Configurar Ph: <br>
+    <div class="caja_izquierda_abajo"> Configurar pH: <br>
             <input type="number"
                    id="ph"
                    value=""
