cambias de generales

--- a/templates/proceso.html
+++ b/templates/proceso.html
@@ -70,7 +70,7 @@
 
             <button  type="submit" class="button_apply"> + </button>     <br>
             <input  type="checkbox" id="temperatura_rst" /> Deshabilitar   <br>
-            <input  type="checkbox" id="temperatura_dir" style="visibility:hidden" /> Invertir
+            <input  type="checkbox" id="temperatura_dir" style="visibility:hidden" /> <!--Invertir-->
     </div>
 
 
