cambias de generales

--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -35,7 +35,7 @@
             />
 
             <button  type="submit" class="button_apply"> + </button>     <br>
-            <input  type="checkbox" id="temp_enable" /> habilitar        <br>
+            <input  type="checkbox" id="temp_enable" style="visibility:hidden" /> <!--habilitar   -->     <br> 
     </div>
 
 
