--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -46,7 +46,7 @@
                          step="1"
                   />
                   <button  type="submit" class="button_apply"> + </button>
-                  <br><input  type="checkbox" id="time_enable" /> habilitar
+                  <br><input  type="checkbox" id="time_enable" style="visibility:hidden" /> <!-- habilitar -->
         </div>
 
 
