--- a/templates/autoclave.html
+++ b/templates/autoclave.html
@@ -21,7 +21,7 @@
                    step="1"
             />
 
-            <button  type="submit" class="button_apply"> + </button>     <br>
+            <!-- <button  type="submit" class="button_apply"> + </button>   -->   <br>
             <input  type="checkbox" id="temp_enable" style="visibility:hidden" /> <!--habilitar   -->     <br>
     </div>
 
