trabajando cambios para robustez

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
 
         <aside>
            <h3>BioReactor for BIOCL-IDIN </h3>
-                <p> Autor: Felipe Hooper - Electronic Engineer. <a href="mailto:felipe.hooper.c@gmail.com">Correo electronico </a></p>
+                <p> Autor: Felipe Hooper - Electronic Engineer. <a href="mailto:felipe.hooper.c@gmail.com">Correo electrónico </a></p>
         </aside>
     </section>
   </div>
